--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
         {% endif %}
       </div>
       <div class="wrapper", style="width:270px; justify-content: left; align-items:start">
-        <h1><a href="https://foalfloater66.github.io/"> Morgane Ohlig</a></h1>
+        <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
         <p>{{ site.description | default: site.github.project_tagline }}</p>
         <p class="view">Socials: <a href="https://www.linkedin.com/in/morgane-ohlig/">linkedin</a>; <a href="https://github.com/Foalfloater66">github</a>;</p>
         <p class="view">[morgane/dot/ohlig/at/gmail/dot/com]</p>
